Fixed z-index of main toolbar

--- a/arduino-ide-extension/src/browser/style/main.css
+++ b/arduino-ide-extension/src/browser/style/main.css
@@ -74,6 +74,7 @@
 
 .p-TabBar-toolbar.theia-arduino-toolbar {
     flex: 1;
+    z-index: 0;
 }
 
 #theia-top-panel .p-TabBar-toolbar.theia-arduino-toolbar.right {
